--- a/blog/基础篇（未完结）.md
+++ b/blog/基础篇（未完结）.md
@@ -612,6 +612,23 @@ let endless = () => {
 - never是一个函数体无法结束执行的函数；
 
 
+> 后续将继续更新blog内容  如需查看剩余内容可先移步到**study-code/src/base-01**中查看代码，里面都有详细的注释
 
+后续更新内容：
+- 枚举类型
+- 接口
+- 函数相关知识梳理
+- 类
+- 类与接口的关系
+- 泛型
+- 类型检查机制
+  - 类型推断
+  - 类型兼容
+  - 类型保护
+- 高级类型
+  - 交叉类型与联合类型
+  - 索引类型
+  - 映射类型
+  - 条件类型
 
 
